added first version of connection(chat only in channels without cli)
